[package]
name = "testax"
version = "0.2.0"
authors = ["Filip Bucek <fbucek@invloop.cz>"]
description = "Crate for testing actix GET/POST/UPDATE/DELETE"
edition = "2018"
license = "MIT"
repository = "https://github.com/fbucek/testax"
readme = "README.md"
exclude = [".github/*"]
keywords = ["actix", "test"]
categories = ["development-tools::testing"]

[dependencies]
# Common
anyhow = "1.0"

# Web
actix-web = "2.0"
actix-web-httpauth = "0.4"
actix-service = "1.0"
actix-http = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
actix-rt = "1.1"
